--- a/.github/workflows/manifest.yml
+++ b/.github/workflows/manifest.yml
@@ -20,13 +20,10 @@ jobs:
     - name: Generate Manifest
       run: bash ./manifest.sh
 
-    - name: Setup Git
-      run: |-
-        git config user.name "GitHub Actions Bot"
-        git config user.email "<>"
-
     - name: commit
       run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "github-actions@github.com"
         git add manifest.json
         git commit -m "Generate new manifest"
-        git push origin master
+        git push
