--- a/.github/workflows/manifest.yml
+++ b/.github/workflows/manifest.yml
@@ -15,17 +15,15 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
 
     - name: Generate Manifest
       run: bash ./manifest.sh
 
     - name: commit
       run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "github-actions@github.com"
-        git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
-        git pull github ${GITHUB_REF} --ff-only
+        git config user.name github-actions
+        git config user.email github-actions@github.com
         git add manifest.json
         git commit -m "Generate new manifest"
-        git push github HEAD:${GITHUB_REF}
+        git push
