--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -3,12 +3,6 @@ name: Generate Manifest
 on:
   workflow_dispatch:
 
-  push:
-    branches:
-      - master
-    paths:
-      - '**.lua'
-
 jobs:
   manifest:
     runs-on: ubuntu-latest
@@ -17,8 +11,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Generate Manifest
-      run: bash ./manifest.sh
+    - name: Bump Version
+      run: bash ./bump.sh
 
     - name: Commit Changes
       run: |
@@ -27,3 +21,14 @@ jobs:
         git add manifest.json
         git commit -m "Generate new manifest"
         git push
+
+    - name: Create Tags
+      run: |
+        majorTag=v$(bash ./getMajor.sh)
+
+        git tag -d $majorTag
+        git push --delete origin $majorTag
+        git tag $majorTag
+        git tag v$(cat ./version.txt)
+
+        git push --tags
