--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -26,9 +26,9 @@ jobs:
       run: |
         majorTag=v$(bash ./getMajor.sh)
 
-        git fetch origin
+        git fetch --tags
         git tag -d $majorTag
-        git push --delete origin $majorTag
+        git push --delete $majorTag
         git tag $majorTag
         git tag v$(cat ./version.txt)
 
