--- a/.github/workflows/manifest.yml
+++ b/.github/workflows/manifest.yml
@@ -18,12 +18,14 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Generate Manifest
-      run: bash ./manifest.sh
+      run: |-
+        cd ./src
+        bash $GITHUB_WORKSPACE/.bin/manifest.sh
 
     - name: Commit Changes
-      run: |
+      run: |-
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add manifest.json
+        git add $GITHUB_WORKSPACE/src/manifest.json
         git commit -m "Generate new manifest"
         git push
