--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Bump Version
-      run: bash ./bump.sh
+      run: bash ./.bin/bump.sh
 
     - name: Commit Changes
       run: |
@@ -24,7 +24,7 @@ jobs:
 
     - name: Create Tags
       run: |
-        majorTag=v$(bash ./getMajor.sh)
+        majorTag=v$(bash ./.bin/getMajor.sh)
 
         git fetch --tags
         git tag -d $majorTag
