--- a/.github/workflows/manifest.yml
+++ b/.github/workflows/manifest.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - master
     paths:
+      - .github/workflows/manifest.yml
       - '**.lua'
       - '**/help/*.txt'
       - '**/deps.json'
@@ -24,6 +25,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Install npm
+      uses: actions/setup-node@v3
+
+    - name: Install luamin
+      run: sudo npm install -g luamin
 
     - name: Generate Manifest
       run: |-
