--- a/.github/workflows/manifest.yml
+++ b/.github/workflows/manifest.yml
@@ -45,14 +45,16 @@ jobs:
 
     - name: Commit Changes
       run: |-
-        if [[ -n $(git diff --name-only) ]]; then
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+        git config user.name github-actions
+        git config user.email github-actions@github.com
 
-          for module in $MODULES; do
-            git add ${GITHUB_WORKSPACE}/${module}/manifest.json
-          done
+        cd ${GITHUB_WORKSPACE}
+        for module in $MODULES; do
+          git add ${GITHUB_WORKSPACE}/${module}/manifest.json
+          git add ${GITHUB_WORKSPACE}/${module}/*.min.lua
+        done
 
+        if [[ -n $(git diff --name-only --cached) ]]; then
           git commit -m "Generate new manifest"
           git push
         fi
