--- a/.github/workflows/bump_major.yml
+++ b/.github/workflows/bump_major.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Bump Version
-      run: echo "$(bash ./.bin/getMajor.sh).0" > version.txt
+      run: echo "$(bash ./.bin/getMajor.sh).0" > ./version.txt
 
     - name: Commit Changes
       run: |
