--- a/.github/workflows/manifest.yml
+++ b/.github/workflows/manifest.yml
@@ -50,8 +50,7 @@ jobs:
 
         cd ${GITHUB_WORKSPACE}
         for module in $MODULES; do
-          git add ${GITHUB_WORKSPACE}/${module}/manifest.json
-          git add ${GITHUB_WORKSPACE}/${module}/min/*.min.lua
+          git add ${GITHUB_WORKSPACE}/${module}/*
         done
 
         if [[ -n $(git diff --name-only --cached) ]]; then
